--- a/car_rental/src/css/O_DanhSachSanPham.css
+++ b/car_rental/src/css/O_DanhSachSanPham.css
@@ -7,60 +7,57 @@
 	background-color:  #fff;
 	color: #000;
 } 
-table {
+.owner table {
 	width: 100%;
-	height: 50px;
-	/* overflow: hidden; */
-	
 }
-table thead {
+.owner table thead {
 	width: 100%;
 	font-size: 16px;
 	background: #0025ff26
 
 }
-table{
-	height: 500px !important;
+.owner table{
+	height: 600px !important;
 	display: block;
 	overflow-y: auto !important;
 }
-table tbody{
+.owner table tbody{
 	font-size: 15px;
 }
-table thead tr th{
+.owner table thead tr th{
 	padding: 10px;
 }
-table thead,tbody tr td,th{
+.owner table.text-center thead,tbody tr td,th{
 	border: 1px solid #ccc;
 	width: 30%;
 }
-table tbody tr{
+.owner table.text-center tbody tr{
 	height: 100px !important;
 }
-table thead,tbody tr td,th:last-child{
+.owner table thead,tbody tr td,th:last-child{
 	border: 1px solid #ccc;
 	width: 30%;
 	padding: 4px 50px;
 }
- tr td input{
+.owner tr td input{
 	width: 100%;
 	outline: none;
 }
 #search-box.col-9 input{
 	width: 60%;
 }
-tr td p{
+.owner tr td p{
 	margin: 0;
 	padding: 0;
 	font-size: 16px;
 	text-align: left;
 }
-tr td p span{
+.owner tr td p span{
 	color: black;
 	font-weight: bold;
 	font-size: 17px;
 }
-#seach-box p{
+.onwer #seach-box p{
 	margin: 0;
 	padding: 0;
 }
@@ -83,7 +80,6 @@ tr td p span{
 } 
 
 .text-center{
-	/* height: 100px; */
 	overflow: hidden;
 }  
 
