--- a/car_rental/src/css/submit.css
+++ b/car_rental/src/css/submit.css
@@ -17,7 +17,7 @@ h6{
     line-height: 100%;
 }
 i{
-    color: blue !important;
+    color: blue;
 }
 #DiaChiNhanXe i{
     color: white !important;
