--- a/car_rental/src/components/admin/QuanLyCuaHang.css
+++ b/car_rental/src/components/admin/QuanLyCuaHang.css
@@ -79,3 +79,6 @@ table tbody td {
     margin-left: 3px;
     box-sizing: border-box;
 }
+#quan-ly-cua-hang>.container-fluid>table tbody tr td.id:hover{
+    background-color: #ddd;
+}
