--- a/car_rental/src/css/ownerCarList.css
+++ b/car_rental/src/css/ownerCarList.css
@@ -1,16 +1,36 @@
 
 #owner-car-list > table{
-    width: 100%;
-    height: 100%;
+    width: 113%;
+    height: 600px !important;
     border-collapse: collapse;
     border-spacing: 0;
+    overflow-y: scroll;
     overflow-x: auto !important;
+    display:block;
+   
+}
+table::-webkit-scrollbar{
+	width: 5px;
+	background-color: #F5F5F5;
+}
+table::-webkit-scrollbar-thumb
+{
+	border-radius: 5px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: rgba(107, 185, 240, 0.5);
+}
+#owner-car-list > table tbody{
+    
+    /* height: 100px !important;
+    width: 100%; 
+    */
+    
 }
 #owner-car-list > table tr{
     width: 100%;
 }
 #owner-car-list > table tr th{
-    background-color: #17a2b8 !important;
+    background-color: #3F51B3 !important;
     text-align: center;
     padding: 10px;
     /* bowner-car-list-color: red; */
@@ -59,6 +79,7 @@
 #owner-car-list > table tr td img{
     background: #fff;
     padding: 1px 10px;
+    height: 60px;
 }
 .dropdown-item.active, .dropdown-item:active {
     color: #fff;
